--- a/composer.json
+++ b/composer.json
@@ -1,93 +1,19 @@
 {
-	"name": "yiisoft/yii",
+	"name": "kze/demoapp",
 	"description": "Yii Web Programming Framework",
-	"keywords": ["yii", "framework"],
-	"homepage": "http://www.yiiframework.com/",
-	"type": "library",
+	"keywords": ["yii", "demoapp"],
+	"homepage": "https://github.com/KZE89/demoapp.git",
+	"type": "webapp",
 	"license": "BSD-3-Clause",
 	"authors": [
 		{
-			"name": "Qiang Xue",
-			"email": "qiang.xue@gmail.com",
-			"homepage": "http://www.yiiframework.com/",
-			"role": "Founder and project lead"
+			"name": "Azat Kabirov",
+			"email": "azat.kabirov89@yandex.ru",
+			"homepage": "https://github.com/KZE89/",
+			"role": "Developer"
 		},
-		{
-			"name": "Alexander Makarov",
-			"email": "sam@rmcreative.ru",
-			"homepage": "http://rmcreative.ru/",
-			"role": "Core framework development"
-		},
-		{
-			"name": "Maurizio Domba",
-			"homepage": "http://mdomba.info/",
-			"role": "Core framework development"
-		},
-		{
-			"name": "Carsten Brandt",
-			"email": "mail@cebe.cc",
-			"homepage": "http://cebe.cc/",
-			"role": "Core framework development"
-		},
-		{
-			"name": "Timur Ruziev",
-			"email": "resurtm@gmail.com",
-			"homepage": "http://resurtm.com/",
-			"role": "Core framework development"
-		},
-		{
-			"name": "Paul Klimov",
-			"email": "klimov.paul@gmail.com",
-			"role": "Core framework development"
-		},
-		{
-			"name": "Wei Zhuo",
-			"email": "weizhuo@gmail.com",
-			"role": "Project site maintenance and development"
-		},
-		{
-			"name": "Sebastián Thierer",
-			"email": "sebas@artfos.com",
-			"role": "Component development"
-		},
-		{
-			"name": "Jeffrey Winesett",
-			"email": "jefftulsa@gmail.com",
-			"role": "Documentation and marketing"
-		}
-		
-	],
-	"support": {
-		"issues": "https://github.com/yiisoft/yii/issues?state=open",
-		"forum": "http://www.yiiframework.com/forum/",
-		"wiki": "http://www.yiiframework.com/wiki/",
-		"irc": "irc://irc.freenode.net/yii",
-		"source": "https://github.com/yiisoft/yii"
-	},
-	"bin": [
-		"framework/yiic"
-	],
-	"archive": {
-		"exclude": [
-			"demos"
-		]
-	},
 	"require": {
-		"php": ">=5.1.0"
-	},
-	"autoload": {
-		"classmap" : [
-			"framework/YiiBase.php",
-			"framework/yii.php"
-		]
-	},
-	"require-dev": {
-		"phing/phing": "2.*",
-		"netwing/selenium-server-standalone": "2.43",
-		"phpunit/phpunit": "~4.3",
-		"phpunit/dbunit": "~1.3",
-		"phpunit/phpunit-selenium": "~1.4",
-		"phpunit/phpunit-story": "~1.0",
-		"phpunit/php-invoker": "~1.1"
+		"php": ">=5.1.0",
+        "yiisoft/yii": ">=1.1.15"
 	}
 }
